Fixed toast notifications in the dark mode

--- a/src/AdminWeb/src/app/components/notification-toast/notification-toast.component.scss
+++ b/src/AdminWeb/src/app/components/notification-toast/notification-toast.component.scss
@@ -1,3 +1,8 @@
+:host {
+  display: block;
+  overflow: hidden;
+}
+
 c-toast-header {
   border: 1px solid #6b7785;
   background-color: rgba(255, 255, 255, 1);
@@ -6,5 +11,4 @@ c-toast-header {
 c-toast-body {
   border: 1px solid lightgray;
   border-top: none;
-  margin-bottom: 20px;
 }
